--- a/app/notes/NotesPage.module.css
+++ b/app/notes/NotesPage.module.css
@@ -3,6 +3,7 @@
   max-width: 1280px;
   margin: 0px auto;
   padding: 0 16px 16px;
+  flex: 1;
 }
 
 .toolbar {
@@ -28,10 +29,4 @@
 
 .button:hover {
   background-color: #0b5ed7;
-}
-
-.loader {
-  left: 50%;
-  bottom: 0;
-  transform: translate(-50%, 0);
 }
