--- a/components/NoteList/NoteList.module.css
+++ b/components/NoteList/NoteList.module.css
@@ -38,6 +38,22 @@
   overflow: hidden;
 }
 
+.details {
+  align-self: flex-end;
+  padding: 6px 12px;
+  font-size: 14px;
+  color: #fff;
+  background-color: #5498ff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+
+  &:hover {
+    background-color: #0d6efd;
+  }
+}
+
 .button {
   align-self: flex-end;
   padding: 6px 12px;
@@ -73,4 +89,22 @@
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+.link {
+  align-self: flex-end;
+  padding: 6px 12px;
+  font-size: 14px;
+  color: #fff;
+  background-color: #0d6efd; /* синій колір */
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  text-decoration: none;
+  display: inline-block;
+  transition: background-color 0.2s ease;
+}
+
+.link:hover {
+  background-color: #0b5ed7;
 }
